# smmu

./: ARM_SMMU_v3_PRD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  TASKS.md  build.sh
docs/: BUILD_DOCS.md  api-documentation.md  architecture-guide.md  design-documentation.md  developer-guide.md  specification-mapping.md  user-manual.md
examples/: CMakeLists.txt  configuration_example.cpp
include/smmu/: address_space.h  configuration.h  fault_handler.h  smmu.h  stream_context.h  tlb_cache.h  types.h
src/address_space/: address_space.cpp
src/cache/: tlb_cache.cpp
src/configuration/: configuration.cpp
src/fault/: fault_handler.cpp
src/smmu/: smmu.cpp
src/stream_context/: stream_context.cpp
src/types/: types.cpp
tests/: CMakeLists.txt  TEST_COVERAGE_REPORT.md  test_thread_safety.cpp
tests/integration/: CMakeLists.txt  INTEGRATION_TEST_SUMMARY.md  test_integration_base.h  test_large_scale_scalability.cpp  test_minimal_integration.cpp  test_pasid_context_switching.cpp  test_stream_isolation.cpp  test_two_stage_translation.cpp  test_two_stage_translation_fixed.cpp
tests/performance/: CMakeLists.txt  address_space_performance_test.cpp  optimization_benchmark_test.cpp
tests/unit/: CMakeLists.txt  EDGE_CASE_TEST_SUMMARY.md  optimization_regression_test.cpp  test_address_space.cpp  test_configuration.cpp  test_edge_cases.cpp  test_fault_handler.cpp  test_smmu.cpp  test_smmu.cpp.backup  test_stream_context.cpp  test_task53_event_command_processing.cpp  test_tlb_cache.cpp  test_types.cpp
